Fixed the Distorted Elements.

--- a/Personal_Website_Styles.css
+++ b/Personal_Website_Styles.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 
 :root {
@@ -290,158 +289,3 @@ footer img {
 #Contact a:hover {
   color: yellow;
 }
-=======
-:root {
-  --Header_Height: 5em;
-}
-
-* {
-  margin: 0;
-}
-
-.Main_Header {
-  position: fixed;
-  background-color: #127475;
-  text-align: right;
-  height: var(--Header_Height);
-  width: 100vw;
-
-  display: flex;
-
-  z-index: 99;
-}
-
-.Header_Text {
-  margin: calc(0.1 * var(--Header_Height)) 1em;
-  box-sizing: border-box;
-  color: white;
-  display: inline-block;
-  text-decoration: none;
-  font-family: "Anton", sans-serif;
-  font-size: 2em;
-
-  transition: all, 0.5s;
-}
-
-.Header_Text:hover {
-  transform: scale(1.2);
-  color: yellow;
-}
-
-.Content_Block {
-  height: calc(100vh);
-}
-
-#About_Me {
-  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-    url(./images/LandScape.jpg);
-  background-repeat: no-repeat;
-  /* background-position: center; */
-  background-attachment: fixed;
-  background-size: cover;
-  /* top: var(--Header_Height); */
-  text-align: center;
-}
-
-#About_Me_Content {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.About_Me_Content {
-  text-align: left;
-  color: white;
-  margin-left: 5em;
-  margin-right: 5em;
-
-  overflow: hidden;
-}
-
-.Content_Block_Title {
-  color: white;
-  text-align: left;
-  padding: 3em 2em;
-}
-
-.Projects_Header {
-  padding: 0.5em;
-  background-color: #0beaeebe;
-  text-align: center;
-}
-
-.Arts_Header {
-  padding: 0.5em;
-  text-align: center;
-}
-
-#About_Me_Paragraph {
-  color: white;
-  text-align: center;
-  font-size: 2em;
-  padding-top: 10%;
-}
-
-#Projects {
-  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-    url(./images/Projects_Background.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
-  background-size: cover;
-}
-
-#Arts {
-  background-color: #20a4f3;
-  color: white;
-}
-
-.Arts_Wrapper {
-  margin-left: 2em;
-  margin-right: 2em;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  grid-gap: 2em;
-}
-
-img {
-  width: 100%;
-}
-
-.Projects_Wrapper {
-  padding-top: 2em;
-  padding-left: 2em;
-  padding-right: 2em;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-
-  grid-gap: 2em;
-}
-
-.Project_Link {
-  text-decoration: none;
-  color: black;
-}
-
-.Project_Block {
-  background-color: #0beaeebe;
-  border-radius: 1em;
-  border-color: silver;
-  border: solid;
-
-  width: 100%;
-  height: 100%;
-}
-
-.Project_Image {
-  width: 100%;
-  height: 50%;
-  align-self: center;
-}
-
-.Project_Block:hover {
-  transform: scale(1.05);
-  transition: all, 0.5s;
-}
->>>>>>> 8336892e518101a81bb5931c912c794fadb82cc7
